--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -3,7 +3,7 @@
     <div id="header" class="span12">
       <div class="navbar">
         <div class="navbar-inner">
-          <%= link_to "Home", root_path, :class => 'brand' %>
+          <%= link_to image_tag("quartutor.png", :border => 0), root_path, :class => 'quick'%>
           <ul class="nav pull-right">
             <% if user_signed_in? %>
                 <li>
