--- a/app/views/application/_content.html.erb
+++ b/app/views/application/_content.html.erb
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-  <div class="row-fluid">
+<div class="container">
+  <div class="row">
     <div id="content" class="span12">
       <%= yield %>
     </div>
