--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-  <div class="row-fluid">
+<div class="container">
+  <div class="row">
     <div id="footer" class="span12">
       <small>
         <a href='#'>2012 Assemicro Inc. All rights reserved.</a>
