--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,31 +1,40 @@
-<div class="container-fluid">
-  <div class="row-fluid">
-    <div id="header" class="span12">
-      <div class="navbar">
-        <div class="navbar-inner">
-          <%= link_to image_tag("quartutor.png", :border => 0), root_path, :class => 'quick'%>
-          <ul class="nav pull-right">
-            <% if user_signed_in? %>
-                <li>
-                  <%= link_to 'Logout', destroy_user_session_path, :method => 'delete' %>
-                </li>
-            <% else %>
-                <li>
-                  <%= link_to 'Login', new_user_session_path %>
-                </li>
-            <% end %>
-            <% if user_signed_in? %>
-                <li>
-                  <%= link_to 'Edit account', edit_user_registration_path %>
-                </li>
-            <% else %>
-                <li>
-                  <%= link_to 'Sign up', new_user_registration_path %>
-                </li>
-            <% end %>
-          </ul>
-        </div>
+<div class="navbar">
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="brand" href="#">quartute</a>
+      <div class="nav-collapse">
+        <ul class="nav">
+          <li class="active"><a href="#"><i class="icon-home icon-white"></i> Home</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li class="divider"></li>
+              <li class="nav-header">Nav header</li>
+              <li><a href="#">Separated link</a></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+        <ul class="nav pull-right">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Utility <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Item 1</a></li>
+              <li><a href="#">Item 2</a></li>
+              <li><a href="#">Item 3</a></li>
+            </ul>
+          </li>
+        </ul>
       </div>
+      <!-- /.nav-collapse -->
     </div>
+    <!-- /.container -->
   </div>
-</div>
+  <!-- /.navbar-inner -->
+</div><!-- /.navbar -->
